--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "type": "module",
   "engines": {
-    "node": "16.x"
+    "node": "16.13.0"
   },
   "scripts": {
     "start": "node backend/server",
