--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
   "builds": [
     {
       "src": "./backend/server.js",
-      "use": "@now/node"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/backend/routes"
+      "dest": "/backend/server.js"
     }
   ]
 }
